<?xml version="1.0"?>
<package>
  	<name>lab3</name>
  	<version>0.0.0</version>
  	<description>The lab3 package</description>

  	<maintainer email="YellowJeep@wpi.edu">Rob/Tim/Matt</maintainer>

  	<license>RENO</license>

	<url type="website">http://robrowski.github.io/YellowJeep/</url> 

	<author email="rpdabrowski@wpi.edu">Robert Dabrowski</author>
	<author email="tmmurcko@wpi.edu">Tim Murcko</author>
	<author email="mscosti@wpi.edu">Matt Costi</author>


  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  
  
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
   <build_depend>tf</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
